--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="social-links">
-                <a href="https://spliichx01.github.io/github-portfolio/" class="social-link" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://spliichx.github.io" class="social-link" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/chukwudi-aboaja" class="social-link" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:chukwudi.aboaja@gmail.com" class="social-link" title="Email"><i class="fas fa-envelope"></i></a>
                 <a href="https://twitter.com/spliichx" class="social-link" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
