--- a/index.html
+++ b/index.html
@@ -1157,9 +1157,8 @@
                 <div class="project-image"><img src="images/EV.png"></div>
                 <div class="project-content">
                     <h3>Electric Vehicle Analysis</h3>
-                    <p>This project showcases the design and implementation of a scalable data warehouse architecture to centralize, store, 
-                        and analyze business data efficiently. It includes the full ETL/ELT pipeline — from raw data ingestion to reporting,
-                         enabling streamlined analytics and accurate decision-making</p>
+                    <p>TDeveloped an interactive dashboard analyzing U.S. electric vehicle (EV) adoption trends from 2010 onwards. 
+                        Leveraged visualization techniques to uncover growth patterns, regional adoption differences, and market dominance among manufacturers.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Data Warehouse Design</span>
                         <span class="tech-tag">SQL</span>
