--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
                 <div class="project-image"><img src="images/EV.png"></div>
                 <div class="project-content">
                     <h3>Electric Vehicle Analysis</h3>
-                    <p>TDeveloped an interactive dashboard analyzing U.S. electric vehicle (EV) adoption trends from 2010 onwards. 
+                    <p>Developed an interactive dashboard analyzing U.S. electric vehicle (EV) adoption trends from 2010 onwards. 
                         Leveraged visualization techniques to uncover growth patterns, regional adoption differences, and market dominance among manufacturers.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Data Warehouse Design</span>
@@ -1179,9 +1179,9 @@
                 <div class="project-image"><img src="images/HR.png"></div>
                 <div class="project-content">
                     <h3>HR Dashboard</h3>
-                    <p>Developed a robust regression model to accurately predict house prices based on features such as location, 
-                        size, number of rooms, and property condition. The project covers the full ML pipeline, 
-                        from data preprocessing and feature engineering to model training, evaluation, and deployment.</p>
+                    <p>An interactive Tableau dashboard to give HR teams a unified, data-driven view of workforce trends, 
+                        diversity, performance, and compensation. Consolidated fragmented HR data into a single, accessible analytics tool supporting both strategic 
+                        decision-making and operational oversight.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Data Preprocessing</span>
                         <span class="tech-tag">Tableau</span>
