--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,8 @@
                         <span class="tech-tag">Excel</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/spliichx01/tableau-projects/tree/main/projects/Sales%20Performance" class="project-link">GitHub</a>
-                        <a href="https://github.com/spliichx01/tableau-projects/blob/main/projects/Sales%20Performance/README.md" class="project-link">Documentation</a>
+                        <a href="https://github.com/spliichx/tableau-projects/tree/main/projects/Sales%20Performance" class="project-link">GitHub</a>
+                        <a href="https://github.com/spliichx/tableau-projects/blob/main/projects/Sales%20Performance/README.md" class="project-link">Documentation</a>
                     </div>
                 </div>
             </div>
@@ -1169,8 +1169,8 @@
                         
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/spliichx01/tableau-projects/tree/main/projects/EV%20Perormance%20Dashboard" class="project-link">GitHub</a>
-                        <a href="#" class="project-link">API</a>
+                        <a href="https://github.com/spliichx/tableau-projects/tree/main/projects/EV%20Perormance%20Dashboard" class="project-link">GitHub</a>
+                        <!-- <a href="#" class="project-link">API</a> -->
                     </div>
                 </div>
             </div>
@@ -1188,8 +1188,8 @@
                         <span class="tech-tag">Regression</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/spliichx01/tableau-projects/tree/main/projects/HR%20Dashboard" class="project-link">Component Library</a>
-                        <a href="https://github.com/spliichx01/tableau-projects/tree/main/projects/HR%20Dashboard#readme" class="project-link">Documentation</a>
+                        <a href="https://github.com/spliichx/tableau-projects/tree/main/projects/HR%20Dashboard" class="project-link">Github</a>
+                        <a href="https://github.com/spliichx/tableau-projects/tree/main/projects/HR%20Dashboard#readme" class="project-link">Documentation</a>
                     </div>
                 </div>
             </div>
@@ -1314,14 +1314,14 @@
                     <div class="contact-icon"><i class="fab fa-github"></i></div>
                     <div>
                         <div>GitHub</div>
-                        <div style="color: rgba(255,255,255,0.8);">github.com/spliichx01</div>
+                        <div style="color: rgba(255,255,255,0.8);">github.com/spliichx</div>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">🌐</div>
                     <div>
                         <div>Portfolio</div>
-                        <div style="color: rgba(255,255,255,0.8);">spliichx01.github.io</div>
+                        <div style="color: rgba(255,255,255,0.8);">spliichx.github.io</div>
                     </div>
                 </div>
             </div>
