--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
                         </div>
                         <div class="achievements-list">
                             <ul>
-                                <li>Developed 15+ interactive Power BI dashboards serving 200+ stakeholders</li>
+                                <li>Developed interactive Power BI dashboards serving 200+ stakeholders</li>
                                 <li>Implemented machine learning models achieving 85% accuracy in sales forecasting</li>
                                 <li>Optimized data processing workflows, reducing report generation time by 60%</li>
                                 <li>Led training workshops on data visualization best practices for 50+ colleagues</li>
@@ -1906,7 +1906,7 @@
             </div>
 
             <div class="contact-form">
-                <form id="contactForm" action="https://formsubmit.co/chukwudi.aboaja@gmail.com" method="POST">
+                <form id="contactForm" action="https://formsubmit.co/6f6af5e40b864f6f1550e15a0296aaee" method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" placeholder="Your name" required>
