--- a/index.html
+++ b/index.html
@@ -1886,14 +1886,14 @@
                     <div class="contact-icon"><i class="fab fa-linkedin"></i></div>
                     <div>
                         <div>LinkedIn</div>
-                        <div style="color: rgba(255,255,255,0.8);">linkedin.com/in/chukwudi-aboaja</div>
+                        <div style="color: rgba(255,255,255,0.8);">in/chukwudi-aboaja</div>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon"><i class="fab fa-github"></i></div>
                     <div>
                         <div>GitHub</div>
-                        <div style="color: rgba(255,255,255,0.8);">github.com/spliichx</div>
+                        <div style="color: rgba(255,255,255,0.8);">spliichx</div>
                     </div>
                 </div>
                 <div class="contact-item">
