changes on info

--- a/index.html
+++ b/index.html
@@ -1433,17 +1433,9 @@
                             <div class="date-range">2023 - Present</div>
                         </div>
                         <div class="job-description">
-                            Led data analytics initiatives for enterprise clients, developing comprehensive dashboards and predictive models 
-                            that improved business decision-making processes by 40%. Managed end-to-end data pipelines and collaborated 
-                            with cross-functional teams to deliver data-driven solutions.
-                        </div>
-                        <div class="achievements-list">
-                            <ul>
-                                <li>Developed interactive Power BI dashboards serving 200+ stakeholders</li>
-                                <li>Implemented machine learning models achieving 85% accuracy in sales forecasting</li>
-                                <li>Optimized data processing workflows, reducing report generation time by 60%</li>
-                                <li>Led training workshops on data visualization best practices for 50+ colleagues</li>
-                            </ul>
+                            Developed and maintained real-time dashboards in Power BI and Spotfire, analyzed complex datasets using Python, 
+                            SQL, and DAX, and collaborated with engineers and geologists to translate insights into actionable improvements, 
+                            optimizing drilling operations and reducing non-productive time (NPT).
                         </div>
                     </div>
 
@@ -1457,17 +1449,10 @@
                         </div>
                         <div class="job-description">
                             Specialized in business intelligence and data visualization projects for retail and e-commerce clients. 
-                            Developed automated reporting systems and performed statistical analysis to identify market trends 
-                            and customer behavior patterns.
+                            Conducted in-depth user behavior analysis in Power BI, developed machine learning models to predict churn and inform retention strategies, 
+                            and led marketing analytics initiatives to optimize campaigns, resulting in increased customer retention and acquisition.
                         </div>
-                        <div class="achievements-list">
-                            <ul>
-                                <li>Created automated ETL processes handling 10M+ records daily</li>
-                                <li>Built customer segmentation models increasing targeted campaign effectiveness by 30%</li>
-                                <li>Designed real-time monitoring dashboards for e-commerce performance metrics</li>
-                                <li>Collaborated with marketing teams to optimize conversion funnel analysis</li>
-                            </ul>
-                        </div>
+                    
                     </div>
 
                     <div class="experience-item">
@@ -1479,17 +1464,8 @@
                             <div class="date-range">2021 - 2022</div>
                         </div>
                         <div class="job-description">
-                            Supported senior analysts in data collection, cleaning, and preliminary analysis projects. 
-                            Gained hands-on experience with various data tools and methodologies while contributing 
-                            to client deliverables and internal research initiatives.
-                        </div>
-                        <div class="achievements-list">
-                            <ul>
-                                <li>Processed and cleaned datasets containing 1M+ records using Python and SQL</li>
-                                <li>Assisted in developing 20+ analytical reports for Fortune 500 clients</li>
-                                <li>Contributed to A/B testing frameworks for digital marketing campaigns</li>
-                                <li>Earned recognition for attention to detail and data quality assurance</li>
-                            </ul>
+                            Designed interactive dashboards and self-service analytics tools, tracked carbon emissions with robust data models, 
+                            and managed cloud data pipelines, driving data-driven decisions and supporting key sustainability initiatives.
                         </div>
                     </div>
                 </div>
