changes on info

--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
     <section id="resume" class="section fade-in">
         <div class="section-header">
             <h2 class="section-title">Resume</h2>
-            <p class="section-subtitle">Comprehensive overview of my professional journey, education, and achievements</p>
+             <!--  <p class="section-subtitle">Comprehensive overview of my professional journey, education, and achievements</p> -->
         </div>
 
         <div class="resume-container">
@@ -1348,7 +1348,7 @@
                         </button>
                         <a href="#resume-content" class="btn-resume btn-print">
                             <i class="fas fa-eye"></i>
-                            <span>View Below</span>
+                            <span>View</span>
                         </a>
                     </div>
                 </div>
