changes on info

--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
         <div class="nav-container">
             <div class="logo-container">
                 <div class="logo" id="logo Icon">
-                    <img src="images/icon.png" alt="Logo Icon">
+                    <img src="images/spliichx.png" alt="Logo Icon">
                 </div>
             </div>
             <ul class="nav-menu">
